day2/hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - www.30daysofazure.com
    secretName: tls-secret
  rules:
  - host: www.30daysofazure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: projectnami
          servicePort: 80
